# self-supervised-monocular-depth-perception

./: LICENSE  README.md
depth_project/depth_project/: package.xml  setup.cfg  setup.py
depth_project/depth_project/depth_project/: auto_collect.py  auto_grid_collect.py  collect_selfsup.py  dataset_sequence.py  depth_node.py  keyboard_control.py  keyboard_steering.py  losses.py  robot_controller.py  save_images.py  train_selfsup_depth.py  yolo_controller.py  yolo_node.py
depth_project/depth_project/depth_project/models/: depth_net.py  pose_net.py
depth_project/depth_project/depth_project/tools/: metrics_logger.py
depth_project/depth_project/launch/: custom_world_waffle.launch.py  gazebo.launch.py
depth_project/depth_project/worlds/: columns_world.world
my_yolo_world/my_yolo_world/: package.xml  setup.cfg  setup.py
my_yolo_world/my_yolo_world/launch/: tb3_custom_world.launch.py
my_yolo_world/my_yolo_world/worlds/: yolo_world.sdf
yolo_nav/yolo_nav/: package.xml  setup.cfg  setup.py
yolo_nav/yolo_nav/yolo_nav/: yolo_nav_node.py  yolo_visual_node.py
