<?xml version="1.0"?>
<package format="3">
  <name>my_yolo_world</name>
  <version>0.0.1</version>
  <description>Custom Gazebo world for TurtleBot3 + YOLO</description>
  <maintainer email="mhamad@example.com">mhamad</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
